--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,15 +6,16 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #a78bfa;
+  --ifm-color-primary-dark: #8b66f8;
+  --ifm-color-primary-darker: #7d53f8;
+  --ifm-color-primary-darkest: #521bf5;
+  --ifm-color-primary-light: #c3b0fc;
+  --ifm-color-primary-lighter: #d1c3fc;
+  --ifm-color-primary-lightest: #fcfbff;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --ifm-font-family-base: "Circular Std", sans-serif;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -30,4 +31,5 @@
   --ifm-background-color: rgb(10,10,26);
   --ifm-navbar-background-color: rgba(30, 41, 59, 0.5);
   --ifm-hero-background-color: transparent;
+  --ifm-font-family-base: "Circular Std", sans-serif;
 }
